# AIOS-Mobius-Core

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
aios/: __init__.py  api.py
mobius_motor/: __init__.py  arbiter.py  balance.py  cli.py  core.py  engine.py  entropy.py  optimize.py  regen.py  steady.py  time_formulas.py  unwrap.py  wrap.py
simulations/: optimize_demo.py  simple_run.py
tests/: test_api.py  test_arbiter.py  test_balance.py  test_end_to_end.py  test_engine.py  test_entropy.py  test_motor.py  test_regen.py  test_steady.py  test_unwrap.py  test_wrap.py
