[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aios-mobius-core"
version = "0.1.0"
description = "Λ-Möbius Core AIOS engine"
authors = [
    { name = "Mike2024-spec" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pytest",
    "httpx",
    "numpy"
]

[tool.setuptools.packages.find]
where = ["."]
